[package]
name = "composewebview-wry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "composewebview_wry"
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[dependencies]
thiserror = "2.0.11"
uniffi = "0.29.4"
wry = "0.53.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
incremental = false

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.0"
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
